# calculus

./: CMakeLists.txt  README.md
nginx/: default
src/: CMakeLists.txt  b64decode.c  b64decode.h  foo.c  infix-calc.c  infix-calc.h  pofix-calc.c  pofix-calc.h  pofix-stack.c  pofix-stack.h
systemd/: foo.service
test/: CMakeLists.txt  tests.c
